--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@ Use Pulse in a manner that could damage, disable, overburden, or impair the bot.
         
         <h4>
             8. Disclaimer of warranties<br>
-            [Bot Name] is provided "as is" and "as available" without any warranties of any kind, either express or implied. We do not guarantee that [Bot Name] will be error-free or uninterrupted, and we are not responsible for any issues that may arise from the use of the bot.<br>
+            Pulse is provided "as is" and "as available" without any warranties of any kind, either express or implied. We do not guarantee that Pulse will be error-free or uninterrupted, and we are not responsible for any issues that may arise from the use of the bot.<br>
     </h4>
     <h4>
         9. Limitation of liability<br>
-        To the fullest extent permitted by law, we shall not be liable for any damages, including but not limited to direct, indirect, incidental, special, or consequential damages arising out of the use or inability to use [Bot Name].<br>
+        To the fullest extent permitted by law, we shall not be liable for any damages, including but not limited to direct, indirect, incidental, special, or consequential damages arising out of the use or inability to use Pulse.<br>
     </h4>
     <h4>
         10. Changes to the Terms<br>
-        We reserve the right to modify these Terms at any time. Any changes will be posted on this page, and it is your responsibility to review them periodically. Your continued use of [Bot Name] after any changes constitutes acceptance of the new Terms.<br>
+        We reserve the right to modify these Terms at any time. Any changes will be posted on this page, and it is your responsibility to review them periodically. Your continued use of Pulse after any changes constitutes acceptance of the new Terms.<br>
     </h4>
 </body>
 </html>
