--- a/privacy.html
+++ b/privacy.html
@@ -23,13 +23,13 @@ We are committed to protecting your privacy. This Privacy Policy explains how we
         2. Information we collect<br>
         We may collect the following types of information:<br>
         User Data: Information from your Discord profile, such as username, user ID, and avatar.<br>
-        Usage Data: Information about your interactions with [Bot Name], including commands issued and responses received.<br>
+        Usage Data: Information about your interactions with Pulse, including commands issued and responses received.<br>
         Gaming Data: Information from linked gaming profiles, such as game statistics and performance metrics.<br>
     </h4>
     <h4>
         3. How we use your information<br>
         We use the information we collect to: <br>
-        Provide, maintain, and improve [Bot Name]'s functionality.<br>
+        Provide, maintain, and improve Pulse's functionality.<br>
 Respond to user requests and provide customer support.<br>
 Analyze usage trends and improve user experience.<br>
     </h4>
@@ -47,7 +47,7 @@ We take reasonable measures to protect your information from unauthorized access
     </h4>
         
     <h4> 6. Changes to this Privacy Policy<br>
-        We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. Your continued use of [Bot Name] after any changes constitutes your acceptance of the new Privacy Policy.
+        We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. Your continued use of Pulse after any changes constitutes your acceptance of the new Privacy Policy.
     </h4>
         <h4>
             7. Contact us<br>
